ヘッダー・フッターの画面分割

--- a/app/views/hair_styles/index.html.erb
+++ b/app/views/hair_styles/index.html.erb
@@ -1,2 +1,2 @@
-<h1>HairStyles#index</h1>
-<p>Find me in app/views/hair_styles/index.html.erb</p>
+<%= render "shared/header" %>
+<%= render "shared/footer" %>
