--- a/app/views/hair_styles/new.html.erb
+++ b/app/views/hair_styles/new.html.erb
@@ -24,7 +24,7 @@
     </div>
     <%# /出品画像 %>
     <%# 商品名と商品説明 %>
-    <div class="new-items">
+<!--    <div class="new-items">
       <div class="weight-bold-text">
         商品名
         <span class="indispensable">必須</span>
@@ -37,7 +37,7 @@
         </div>
         <%= f.text_area :info, class:"items-text", id:"item-info", placeholder:"商品の説明（必須 1,000文字まで）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。" ,rows:"7" ,maxlength:"1000" %>
       </div>
-    </div>
+    </div> -->
     <%# /商品名と商品説明 %>
 
     <%# 商品の詳細 %>
@@ -75,17 +75,11 @@
           <span class="indispensable">必須</span>
         </div>
         <%= f.collection_select(:hair_color_id, HairColor.all, :id, :name, {}, {class:"select-box", id:"item-prefecture"}) %>
-<!--        <div class="weight-bold-text">
-          発送までの日数
-          <span class="indispensable">必須</span>
-        </div>
-        <%= f.collection_select(:scheduled_delivery_id, ScheduledDelivery.all, :id, :name, {}, {class:"select-box", id:"item-scheduled-delivery"}) %>
-      </div> -->
     </div>
     <%# /配送について %>
 
     <%# 販売価格 %>
-    <div class="sell-price">
+<!--    <div class="sell-price">
       <div class="weight-bold-text question-text">
         <span>販売価格<br>(¥300〜9,999,999)</span>
         <a class="question" href="#">?</a>
@@ -112,7 +106,7 @@
         </div>
         </span>
       </div>
-    </div>
+    </div> -->
     <%# /販売価格 %>
 
     <%# 注意書き %>
