ショップ投稿・編集・削除　実装

--- a/app/assets/stylesheets/shops/index.scss
+++ b/app/assets/stylesheets/shops/index.scss
@@ -180,7 +180,7 @@ a {
   content: '';
   width: 70px;
   height: 4px;
-  background-color: #ce763c;
+  background-color: #3ccace;
   position: absolute;
   bottom: -10px;
   left: 50%;
@@ -233,7 +233,7 @@ a {
   font-size: 3vh;
   margin: 1vh 0;
   text-decoration: none;
-  color: #3ccace;
+  color: #ce763c;
   font-weight: bold;
 }
 
