--- a/app/assets/stylesheets/hair_styles/new.css
+++ b/app/assets/stylesheets/hair_styles/new.css
@@ -182,8 +182,8 @@
 }
 
 .sell-btn {
-  background: #ea352d;
-  border: 1px solid #ea352d;
+  background: #883c38;
+  border: 1px solid #883c38;
   color: #fff;
   width: 100%;
   height: 50px;
