--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -139,8 +139,8 @@
 
 .register-red-btn {
   width: 100%;
-  background: #ea352d;
-  border: 1px solid #ea352d;
+  background: #883c38;
+  border: 1px solid #883c38;
   color: #fff;
   line-height: 48px;
   font-size: 14px;
