--- a/app/views/hair_styles/new.html.erb
+++ b/app/views/hair_styles/new.html.erb
@@ -77,7 +77,7 @@
         <%= f.collection_select(:hair_color_id, HairColor.all, :id, :name, {}, {class:"select-box", id:"item-prefecture"}) %>
         <div class="weight-bold-text">
           ショップ名
-          <span class="indispensable">必須</span>
+          <span class="indispensable">※任意</span>
         </div>
         <%= f.collection_select(:shop_id, Shop.all, :id, :shop_name, {:include_blank => "---"}, {class:"select-box", id:"item-prefecture"}) %>
       </div>
